--- a/SASS/layouts/footer.scss
+++ b/SASS/layouts/footer.scss
@@ -18,7 +18,7 @@
     align-items: center;
   }
 }
-.mentions,
+.legals,
 .contact {
   a {
     color: $secon-color;
@@ -41,7 +41,7 @@
     margin-top: 1rem;
     margin-bottom: 1rem;
   }
-  .mentions {
+  .legals {
     margin-top: 1rem;
   }
 }
