--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -17,5 +17,5 @@
 //blocs BEM réutilisables
 @import "./pages/acceuil";
 @import "./pages/restaurant";
-@import "./pages/mentions";
+@import "./pages/legals";
 @import "./utils/animations"; //On place les Keyframes en dernier pour des raisons d'optimisation
