--- a/SASS/pages/accueil.scss
+++ b/SASS/pages/accueil.scss
@@ -55,11 +55,11 @@
   }
 }
 
-.menu-titre {
+.menu__titre {
   margin-top: 0;
   padding-left: 0.2rem;
 }
 
-.menu-p {
+.menu__menu {
   margin-top: 0;
 }
