--- a/css/style.css
+++ b/css/style.css
@@ -959,7 +959,15 @@ body {
 #section_menu {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  padding-left: 3vh;
+  padding-right: 3vh;
+}
+
+#section_menu2 {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
   padding-left: 3vh;
   padding-right: 3vh;
 }
@@ -974,8 +982,8 @@ body {
 }
 
 .menu {
-  height: 31vh;
-  width: 22vh;
+  height: 40vh;
+  width: 30vh;
   min-height: 8rem;
   min-width: 6rem;
   margin: 1.5vh 1vh 1.5vh 1vh;
