ajout d'un padding top pour section_menu

--- a/css/prefixed/style.css
+++ b/css/prefixed/style.css
@@ -748,6 +748,7 @@ body {
   padding-left: 50vh;
   padding-right: 50vh;
   padding-bottom: 3vh;
+  padding-top: 5vh;
 }
 #section_menu2 {
   display: -webkit-box;
