correction du padding top section menu

--- a/css/style.css
+++ b/css/style.css
@@ -1072,7 +1072,7 @@ body {
     justify-content: space-evenly;
     padding-left: 30vh;
     padding-right: 30vh;
-    padding-bottom: 1h;
+    padding-bottom: 1vh;
   }
   
   #section_menu2 {
